--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
     <!-----------------------------------------section 8 blog post------------------------------------------------------------------------------------------->
     <section class="bg-muted blogg">
         <h2 class="text-center mt-5">OUR BLOG POST</h2>
-        <div class="row mb-2 mt-5 ml-2">
+        <div class="row mb-2 mt-5 no no-gutters">
             <div class="col-md-12 col-lg-6">
                 <div class="card flex-md-row mb-4 box-shadow h-md-250" style="width: 90%;">
                     <div class="card-body d-flex flex-column align-items-start">
@@ -318,7 +318,7 @@
         </div>
 
 
-        <div class="row mb-2 ml-2">
+        <div class="row mb-2 ml-2 no no-gutters">
             <div class="col-md-12 col-lg-6">
                 <div class="card flex-md-row mb-4 box-shadow h-md-250" style="width: 90%;">
                     <div class="card-body d-flex flex-column align-items-start">
